[gd_scene load_steps=19 format=3 uid="uid://bnxkkhbiitfk"]

[ext_resource type="TileSet" uid="uid://75nsjf2xrtgl" path="res://gmbar/tileset_my.tres" id="1_730tw"]
[ext_resource type="Script" uid="uid://qcwctk5jm4f7" path="res://chara.gd" id="2_vgjl6"]
[ext_resource type="Texture2D" uid="uid://d3pxj2lpfhlf5" path="res://Frezer.png" id="3_osxaw"]
[ext_resource type="Texture2D" uid="uid://dm48ocos8kpy7" path="res://icon.svg" id="4_k3xho"]
[ext_resource type="Script" uid="uid://masvj64gaa12" path="res://worker.gd" id="5_xujsg"]
[ext_resource type="PackedScene" uid="uid://dt7imjoutfbia" path="res://dropper.tscn" id="6_ofnfe"]
[ext_resource type="Script" uid="uid://dwvcjfxwv8qnh" path="res://Resource_Spawner.gd" id="7_k3xho"]
[ext_resource type="PackedScene" uid="uid://jmf7jqk71a8m" path="res://resource_point.tscn" id="8_osxaw"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_b56bc"]
vertices = PackedVector2Array(2186, 3082, 3466, 3124, -1432.94, 3124, 2038, 3082, 3466, -648, 2314, 1290, 2314, -394, -1411.06, -648, 2166, -394, 2314, 2058, 2186, 2678, 1162, 138, 1162, -10, 2166, 1290, 246, -10, 1034, 2058, 2038, 2678, 1034, 2442, 2166, 1654, 2166, 1910, -266, 1910, -758, 1674, 502, 1418, 650, 1418, 246, 630, -138, 630, -758, 118, 394, 778, 394, 138, 1162, 1014, 650, 1162, 1162, 1162, 2314, 1654, -266, 2058, 886, 2058, 886, 2442, 502, 1014, -138, 778, -906, 1674, -906, 118)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 1, 5, 6), PackedInt32Array(7, 4, 6, 8), PackedInt32Array(9, 1, 0, 10), PackedInt32Array(11, 12, 8, 13), PackedInt32Array(7, 8, 12, 14), PackedInt32Array(15, 9, 10, 16, 17), PackedInt32Array(18, 19, 20, 21, 22, 23), PackedInt32Array(7, 14, 24, 25, 26), PackedInt32Array(27, 28, 11, 13, 29), PackedInt32Array(18, 23, 30, 31, 13, 32), PackedInt32Array(33, 34, 35, 2), PackedInt32Array(17, 16, 3, 2, 35), PackedInt32Array(13, 31, 29), PackedInt32Array(27, 29, 36, 37), PackedInt32Array(37, 36, 22, 21), PackedInt32Array(21, 20, 33, 2, 38), PackedInt32Array(38, 2, 7, 39), PackedInt32Array(13, 5, 1, 32), PackedInt32Array(26, 39, 7), PackedInt32Array(21, 26, 25, 37), PackedInt32Array(32, 1, 9)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-1421, -658, 3476, -658, 3476, 3134, -1443, 3134)])

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_be14r"]

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_md5qg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1acpw"]
size = Vector2(116, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06krs"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_3jmcg"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_osxaw"]
radius = 1000.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3xho"]
size = Vector2(250, 700)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xujsg"]
size = Vector2(750, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofnfe"]
size = Vector2(500, 200)

[node name="test" type="Node2D"]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
scale = Vector2(0.8, 0.8)
navigation_polygon = SubResource("NavigationPolygon_b56bc")

[node name="TileMap" type="TileMap" parent="NavigationRegion2D"]
tile_set = ExtResource("1_730tw")
format = 2
layer_0/tile_data = PackedInt32Array(65538, 65537, 1, 131074, 65537, 1, 196610, 65537, 1, 2, 65537, 1, 262146, 65537, 1, 327682, 65537, 1, -131073, 1, 0, -65537, 1, 0, -1, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 65537, 1, 458751, 1, 0, 524287, 1, 0, 589823, 1, 0, -196608, 1, 0, -131072, 1, 0, -65536, 1, 0, 0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 65537, 1, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, -131075, 1, 0, -65539, 1, 0, -3, 1, 0, 65533, 1, 0, 131069, 1, 0, 196605, 1, 0, 262141, 1, 0, 327677, 1, 0, 393213, 1, 0, 458749, 1, 0, 524285, 1, 0, 589821, 1, 0, -131074, 1, 0, -65538, 1, 0, -2, 1, 0, 65534, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, 458750, 1, 0, 524286, 1, 0, 589822, 1, 0, -196607, 1, 0, -131071, 1, 0, -65535, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 65537, 1, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, -196606, 65537, 0, -131070, 65537, 0, -65534, 65537, 0, -196605, 65537, 0, -131069, 65537, 0, -65533, 65537, 0, -196604, 65537, 0, -131068, 65537, 0, -65532, 65537, 0, -196603, 65537, 0, -131067, 65537, 0, -65531, 65537, 0, -196602, 65537, 0, -131066, 65537, 0, -65530, 65537, 0, -196601, 65537, 0, -131065, 65537, 0, -65529, 65537, 0, -196600, 65537, 0, -131064, 65537, 0, -65528, 65537, 0, 393218, 65537, 0, 458754, 65537, 0, 524290, 1, 0, 393219, 65537, 0, 458755, 65537, 0, 524291, 1, 0, 393220, 65537, 0, 458756, 65537, 0, 524292, 65537, 1, 393221, 65537, 0, 458757, 65537, 0, 524293, 65537, 1, 393222, 65537, 0, 458758, 65537, 0, 524294, 65537, 1, 393223, 65537, 0, 458759, 65537, 0, 524295, 65537, 1, 393224, 65537, 0, 458760, 65537, 0, 524296, 65537, 1, 3, 65537, 1, 65539, 1, 1, 131075, 1, 1, 196611, 1, 1, 262147, 1, 1, 327683, 65537, 0, 4, 65537, 1, 65540, 1, 1, 131076, 1, 1, 196612, 1, 1, 262148, 1, 1, 327684, 65537, 0, 5, 65537, 1, 65541, 1, 1, 131077, 1, 1, 196613, 1, 1, 262149, 1, 1, 327685, 65537, 0, 6, 65537, 1, 65542, 1, 1, 131078, 1, 1, 196614, 1, 1, 262150, 1, 1, 327686, 65537, 0, 7, 65537, 1, 65543, 1, 1, 131079, 1, 1, 196615, 1, 1, 262151, 1, 1, 327687, 65537, 0, 8, 65537, 1, 65544, 1, 1, 131080, 1, 1, 196616, 1, 1, 262152, 1, 1, 327688, 65537, 0, 65545, 1, 1, 131081, 1, 1, 196617, 1, 1, 262153, 1, 1, 65546, 1, 1, 131082, 1, 1, 196618, 1, 1, 262154, 1, 1, 65547, 1, 1, 131083, 1, 1, 196619, 1, 1, 262155, 1, 1, 65548, 1, 1, 131084, 1, 1, 196620, 1, 1, 262156, 1, 1, 65549, 1, 1, 131085, 1, 1, 196621, 1, 1, 262157, 1, 1, 589827, 1, 0, 655363, 1, 0, 720899, 1, 0, 786435, 1, 0, 589828, 65537, 1, 655364, 65537, 1, 720900, 1, 0, 786436, 1, 0, 589829, 1, 0, 655365, 1, 0, 720901, 1, 0, 786437, 1, 0, 589830, 1, 0, 655366, 1, 0, 720902, 1, 0, 786438, 1, 0, 589831, 65537, 0, 655367, 65537, 0, 720903, 65537, 0, 786439, 65537, 0, 589832, 65537, 0, 655368, 65537, 0, 720904, 65537, 0, 786440, 65537, 0, 327689, 65537, 0, 393225, 65537, 0, 458761, 65537, 0, 524297, 65537, 0, 589833, 65537, 0, 655369, 65537, 0, 720905, 65537, 0, 786441, 65537, 0, 327690, 65537, 0, 393226, 65537, 0, 458762, 65537, 0, 524298, 65537, 0, 589834, 65537, 0, 655370, 65537, 0, 720906, 65537, 0, 786442, 65537, 0, 327691, 65537, 0, 393227, 65537, 0, 458763, 65537, 0, 524299, 65537, 0, 589835, 65537, 0, 655371, 65537, 0, 720907, 65537, 0, 786443, 65537, 0, 327692, 65537, 0, 393228, 65537, 0, 458764, 65537, 0, 524300, 65537, 0, 589836, 65537, 0, 655372, 65537, 0, 720908, 65537, 0, 786444, 65537, 0, 327693, 65537, 0, 393229, 65537, 0, 458765, 65537, 0, 524301, 65537, 0, 589837, 65537, 0, 655373, 65537, 0, 720909, 65537, 0, 786445, 65537, 0, 589826, 1, 0, 655362, 1, 0, 720898, 1, 0, 786434, 1, 0, 655357, 1, 0, 720893, 1, 0, 786429, 1, 0, 851965, 1, 0, 655358, 1, 0, 720894, 1, 0, 786430, 1, 0, 851966, 1, 0, 655359, 1, 0, 720895, 1, 0, 786431, 1, 0, 851967, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 1, 0, 786432, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 786433, 1, 0, -196599, 65537, 0, -131063, 65537, 0, -65527, 65537, 0, 9, 65537, 0, -196598, 65537, 0, -131062, 65537, 0, -65526, 65537, 0, 10, 65537, 0, -196597, 65537, 0, -131061, 65537, 0, -65525, 65537, 0, 11, 65537, 0, -196596, 65537, 0, -131060, 65537, 0, -65524, 65537, 0, 12, 65537, 0, -196595, 65537, 0, -131059, 65537, 0, -65523, 65537, 0, 13, 65537, 0, -196594, 65537, 0, -131058, 65537, 0, -196593, 65537, 0, -131057, 65537, 0, -65522, 65537, 0, 14, 65537, 0, 65550, 65537, 0, 131086, 65537, 0, 196622, 65537, 0, 262158, 65537, 0, 327694, 65537, 0, 393230, 65537, 0, 458766, 65537, 0, 524302, 65537, 0, 589838, 65537, 0, 655374, 65537, 0, 720910, 65537, 0, 786446, 65537, 0, -65521, 65537, 0, 15, 65537, 0, 65551, 65537, 0, 131087, 65537, 0, 196623, 65537, 0, 262159, 65537, 0, 327695, 65537, 0, 393231, 65537, 0, 458767, 65537, 0, 524303, 65537, 0, 589839, 65537, 0, 655375, 65537, 0, 720911, 65537, 0, 786447, 65537, 0, -196592, 65537, 0, -131056, 65537, 0, -65520, 65537, 0, 16, 65537, 0, 65552, 65537, 0, 131088, 65537, 0, 196624, 65537, 0, 262160, 65537, 0, 327696, 65537, 0, 393232, 65537, 0, 458768, 65537, 0, 524304, 65537, 0, 589840, 65537, 0, 655376, 65537, 0, 720912, 65537, 0, 786448, 65537, 0, -196591, 65537, 1, -131055, 65537, 1, -65519, 65537, 1, 17, 65537, 1, 65553, 65537, 1, 131089, 65537, 1, 196625, 65537, 1, 262161, 65537, 1, 327697, 65537, 1, 393233, 65537, 1, 458769, 65537, 1, 524305, 65537, 1, 589841, 65537, 1, 655377, 65537, 0, 720913, 65537, 0, 786449, 65537, 0, -196590, 65537, 0, -131054, 65537, 0, -65518, 65537, 0, 18, 65537, 0, 65554, 65537, 0, 131090, 65537, 0, 196626, 65537, 0, 262162, 65537, 0, 327698, 65537, 0, 393234, 65537, 0, 458770, 65537, 0, 524306, 65537, 0, 589842, 65537, 0, 655378, 65537, 0, 720914, 65537, 0, 786450, 65537, 0, -196589, 65537, 0, -131053, 65537, 0, -65517, 65537, 0, 19, 65537, 0, 65555, 65537, 0, 131091, 65537, 0, 196627, 65537, 0, 262163, 65537, 0, 327699, 65537, 0, 393235, 65537, 0, 458771, 65537, 0, 524307, 65537, 0, 589843, 65537, 0, 655379, 65537, 0, 720915, 65537, 0, 786451, 65537, 0, -196588, 65537, 0, -131052, 65537, 0, -65516, 65537, 0, 20, 65537, 0, 65556, 65537, 0, 131092, 65537, 0, 196628, 65537, 0, 262164, 65537, 0, 327700, 65537, 0, 393236, 65537, 0, 458772, 65537, 0, 524308, 65537, 0, 589844, 65537, 0, 655380, 65537, 0, 720916, 65537, 0, 786452, 65537, 0, -196587, 65537, 0, -131051, 65537, 0, -65515, 65537, 0, 21, 65537, 0, 65557, 65537, 0, 131093, 65537, 0, 196629, 65537, 0, 262165, 65537, 0, 327701, 65537, 0, 393237, 65537, 0, 458773, 65537, 0, 524309, 65537, 0, 589845, 65537, 0, 655381, 65537, 0, 720917, 65537, 0, 786453, 65537, 0, -196586, 65537, 0, -131050, 65537, 0, -65514, 65537, 0, 22, 65537, 0, 65558, 65537, 0, 131094, 65537, 0, 196630, 65537, 0, 262166, 65537, 0, 327702, 65537, 0, 393238, 65537, 0, 458774, 65537, 0, 524310, 65537, 0, 589846, 65537, 0, 655382, 65537, 0, 720918, 65537, 0, 786454, 65537, 0, -196585, 65537, 0, -131049, 65537, 0, -65513, 65537, 0, 23, 65537, 0, 65559, 65537, 0, 131095, 65537, 0, 196631, 65537, 0, 262167, 65537, 0, 327703, 65537, 0, 393239, 65537, 0, 458775, 65537, 0, 524311, 65537, 0, 589847, 65537, 0, 655383, 65537, 0, 720919, 65537, 0, 786455, 65537, 0, -196584, 65537, 0, -131048, 65537, 0, -65512, 65537, 0, 24, 65537, 0, 65560, 65537, 0, 131096, 65537, 0, 196632, 65537, 0, 262168, 65537, 0, 327704, 65537, 0, 393240, 65537, 0, 458776, 65537, 0, 524312, 65537, 0, 589848, 65537, 0, 655384, 65537, 0, 720920, 65537, 0, 786456, 65537, 0, -196583, 65537, 0, -131047, 65537, 0, -65511, 65537, 0, 25, 65537, 0, 65561, 65537, 0, 131097, 65537, 0, 196633, 65537, 0, 262169, 65537, 0, 327705, 65537, 0, 393241, 65537, 0, 458777, 65537, 0, 524313, 65537, 0, 589849, 65537, 0, 655385, 65537, 0, 720921, 65537, 0, 786457, 65537, 0, -196582, 65537, 0, -131046, 65537, 0, -65510, 65537, 0, 26, 65537, 0, 65562, 65537, 0, 131098, 65537, 0, 196634, 65537, 0, 262170, 65537, 0, 327706, 65537, 0, 393242, 65537, 0, 458778, 65537, 0, 524314, 65537, 0, 589850, 65537, 0, 655386, 65537, 0, 720922, 65537, 0, 786458, 65537, 0, 917499, 1, 0, 983035, 1, 0, 1048571, 1, 0, 1114107, 1, 0, 1179643, 1, 0, 1245179, 1, 0, 1310715, 1, 0, 1376251, 1, 0, 1441787, 1, 0, 1507323, 1, 0, 1572859, 1, 0, 917500, 1, 0, 983036, 1, 0, 1048572, 1, 0, 1114108, 1, 0, 1179644, 1, 0, 1245180, 1, 0, 1310716, 1, 0, 1376252, 1, 0, 1441788, 1, 0, 1507324, 1, 0, 1572860, 1, 0, 917501, 1, 0, 983037, 1, 0, 1048573, 1, 0, 1114109, 1, 0, 1179645, 1, 0, 1245181, 1, 0, 1310717, 1, 0, 1376253, 1, 0, 1441789, 1, 0, 1507325, 1, 0, 1572861, 1, 0, 917502, 1, 1, 983038, 1, 1, 1048574, 65537, 1, 1114110, 1, 1, 1179646, 1, 1, 1245182, 1, 1, 1310718, 1, 1, 1376254, 1, 1, 1441790, 1, 1, 1507326, 1, 1, 1572862, 1, 1, 917503, 1, 1, 983039, 1, 1, 1048575, 65537, 1, 1114111, 1, 1, 1179647, 1, 1, 1245183, 1, 1, 1310719, 1, 1, 1376255, 1, 1, 1441791, 1, 1, 1507327, 1, 1, 1572863, 1, 1, 851968, 1, 1, 917504, 1, 1, 983040, 65537, 1, 1048576, 1, 1, 1114112, 1, 1, 1179648, 1, 1, 1245184, 1, 1, 1310720, 1, 1, 1376256, 1, 1, 1441792, 1, 1, 1507328, 1, 1, 851969, 1, 1, 917505, 1, 1, 983041, 65537, 1, 1048577, 1, 1, 1114113, 1, 1, 1179649, 1, 1, 1245185, 1, 1, 1310721, 1, 1, 1376257, 1, 1, 1441793, 1, 1, 1507329, 1, 1, 851970, 1, 1, 917506, 1, 1, 983042, 65537, 1, 1048578, 1, 1, 1114114, 1, 1, 1179650, 1, 1, 1245186, 1, 1, 1310722, 1, 1, 1376258, 1, 1, 1441794, 1, 1, 1507330, 1, 1, 851971, 1, 1, 917507, 1, 1, 983043, 65537, 1, 1048579, 1, 1, 1114115, 1, 1, 1179651, 1, 1, 1245187, 1, 1, 1310723, 1, 1, 1376259, 1, 1, 1441795, 1, 1, 1507331, 1, 1, 851972, 1, 1, 917508, 1, 1, 983044, 65537, 1, 1048580, 1, 1, 1114116, 1, 1, 1179652, 1, 1, 1245188, 1, 1, 1310724, 1, 1, 1376260, 1, 1, 1441796, 1, 1, 1507332, 1, 1, 851973, 1, 1, 917509, 1, 1, 983045, 65537, 1, 1048581, 1, 1, 1114117, 1, 1, 1179653, 1, 1, 1245189, 1, 1, 1310725, 1, 1, 1376261, 1, 1, 1441797, 1, 1, 1507333, 1, 1, 851974, 1, 1, 917510, 1, 1, 983046, 65537, 1, 1048582, 1, 1, 1114118, 1, 1, 1179654, 1, 1, 1245190, 1, 1, 1310726, 1, 1, 1376262, 1, 1, 1441798, 1, 1, 1507334, 1, 1, 851975, 1, 1, 917511, 1, 1, 983047, 65537, 1, 1048583, 65537, 1, 1114119, 65537, 1, 1179655, 65537, 1, 1245191, 1, 1, 1310727, 1, 1, 1376263, 1, 1, 1441799, 1, 1, 1507335, 1, 1, 851976, 1, 1, 917512, 1, 1, 983048, 65537, 1, 1048584, 1, 1, 1114120, 1, 1, 1179656, 1, 1, 1245192, 1, 1, 1310728, 1, 1, 1376264, 1, 1, 1441800, 1, 1, 1507336, 1, 1, 851977, 1, 1, 917513, 1, 1, 983049, 65537, 1, 1048585, 1, 1, 1114121, 1, 1, 1179657, 1, 1, 1245193, 1, 1, 1310729, 1, 1, 1376265, 1, 1, 1441801, 1, 1, 1507337, 1, 1, 851978, 1, 1, 917514, 1, 1, 983050, 65537, 1, 1048586, 1, 1, 1114122, 1, 1, 1179658, 1, 1, 1245194, 1, 1, 1310730, 1, 1, 1376266, 1, 1, 1441802, 1, 1, 1507338, 1, 1, 851979, 1, 1, 917515, 1, 1, 983051, 65537, 1, 1048587, 1, 1, 1114123, 1, 1, 1179659, 1, 1, 1245195, 1, 1, 1310731, 1, 1, 1376267, 1, 1, 1441803, 1, 1, 1507339, 1, 1, 851980, 1, 1, 917516, 1, 1, 983052, 65537, 1, 1048588, 1, 1, 1114124, 1, 1, 1179660, 1, 1, 1245196, 1, 1, 1310732, 1, 1, 1376268, 1, 1, 1441804, 1, 1, 1507340, 1, 1, 851981, 1, 1, 917517, 1, 1, 983053, 65537, 1, 1048589, 1, 1, 1114125, 1, 1, 1179661, 1, 1, 1245197, 1, 1, 1310733, 1, 1, 1376269, 1, 1, 1441805, 1, 1, 1507341, 1, 1, 851982, 1, 1, 917518, 1, 1, 983054, 65537, 1, 1048590, 1, 1, 1114126, 1, 1, 1179662, 1, 1, 1245198, 1, 1, 1310734, 1, 1, 1376270, 1, 1, 1441806, 1, 1, 1507342, 1, 1, 851983, 1, 1, 917519, 1, 1, 983055, 65537, 1, 1048591, 1, 1, 1114127, 1, 1, 1179663, 1, 1, 1245199, 1, 1, 1310735, 1, 1, 1376271, 1, 1, 1441807, 1, 1, 1507343, 1, 1, 851984, 1, 1, 917520, 1, 1, 983056, 65537, 1, 1048592, 1, 1, 1114128, 1, 1, 1179664, 1, 1, 1245200, 1, 1, 1310736, 1, 1, 1376272, 65537, 1, 1441808, 65537, 1, 1507344, 65537, 1, 851985, 65537, 1, 917521, 65537, 1, 983057, 65537, 1, 1048593, 1, 1, 1114129, 1, 1, 1179665, 1, 1, 1245201, 1, 1, 1310737, 1, 1, 1376273, 1, 1, 1441809, 1, 1, 1507345, 1, 1, 851986, 1, 1, 917522, 1, 1, 983058, 1, 1, 1048594, 1, 1, 1114130, 1, 1, 1179666, 1, 1, 1245202, 1, 1, 1310738, 1, 1, 1376274, 1, 1, 1441810, 1, 1, 1507346, 1, 1, 851987, 1, 1, 917523, 1, 1, 983059, 1, 1, 1048595, 1, 1, 1114131, 1, 1, 1179667, 1, 1, 1245203, 1, 1, 1310739, 1, 1, 1376275, 1, 1, 1441811, 1, 1, 1507347, 1, 1, 851988, 1, 1, 917524, 1, 1, 983060, 1, 1, 1048596, 1, 1, 1114132, 1, 1, 1179668, 1, 1, 1245204, 1, 1, 1310740, 1, 1, 1376276, 1, 1, 1441812, 1, 1, 1507348, 1, 1, 851989, 1, 1, 917525, 1, 1, 983061, 1, 1, 1048597, 1, 1, 1114133, 1, 1, 1179669, 1, 1, 1245205, 1, 1, 1310741, 1, 1, 1376277, 1, 1, 1441813, 1, 1, 1507349, 1, 1, 851990, 1, 1, 917526, 1, 1, 983062, 1, 1, 1048598, 1, 1, 1114134, 1, 1, 1179670, 1, 1, 1245206, 1, 1, 1310742, 1, 1, 1376278, 1, 1, 1441814, 1, 1, 1507350, 1, 1, 851991, 1, 1, 917527, 1, 1, 983063, 1, 1, 1048599, 1, 1, 1114135, 1, 1, 1179671, 1, 1, 1245207, 1, 1, 1310743, 1, 1, 1376279, 1, 1, 1441815, 1, 1, 1507351, 1, 1, 851992, 1, 1, 917528, 1, 1, 983064, 1, 1, 1048600, 1, 1, 1114136, 1, 1, 1179672, 1, 1, 1245208, 1, 1, 1310744, 1, 1, 1376280, 1, 1, 1441816, 1, 1, 1507352, 1, 1, 851993, 1, 1, 917529, 1, 1, 983065, 1, 1, 1048601, 1, 1, 1114137, 1, 1, 1179673, 1, 1, 1245209, 1, 1, 1310745, 1, 1, 1376281, 1, 1, 1441817, 1, 1, 1507353, 1, 1, 851994, 1, 1, 917530, 1, 1, 983066, 1, 1, 1048602, 1, 1, 1114138, 1, 1, 1179674, 1, 1, 1245210, 1, 1, 1310746, 1, 1, 1376282, 1, 1, 1441818, 1, 1, 1507354, 1, 1, -65547, 1, 0, -11, 1, 0, 65525, 1, 0, 131061, 1, 0, 196597, 1, 0, 262133, 1, 0, 327669, 1, 0, 393205, 1, 0, 458741, 1, 0, 524277, 1, 0, 589813, 1, 0, 655349, 1, 0, 720885, 1, 0, 786421, 1, 0, 851957, 1, 0, 917493, 1, 0, 983029, 1, 0, 1048565, 1, 0, 1114101, 1, 0, 1179637, 1, 0, 1245173, 1, 0, 1310709, 1, 0, 1376245, 1, 0, 1441781, 1, 0, 1507317, 1, 0, 1572853, 1, 0, -65546, 1, 0, -10, 1, 0, 65526, 1, 0, 131062, 1, 0, 196598, 1, 0, 262134, 1, 0, 327670, 1, 0, 393206, 1, 0, 458742, 1, 0, 524278, 1, 0, 589814, 1, 0, 655350, 1, 0, 720886, 1, 0, 786422, 1, 0, 851958, 1, 0, 917494, 1, 0, 983030, 1, 0, 1048566, 1, 0, 1114102, 1, 0, 1179638, 1, 0, 1245174, 1, 0, 1310710, 1, 0, 1376246, 1, 0, 1441782, 1, 0, 1507318, 1, 0, 1572854, 1, 0, -65545, 1, 0, -9, 1, 0, 65527, 1, 0, 131063, 1, 0, 196599, 1, 0, 262135, 1, 0, 327671, 1, 0, 393207, 1, 0, 458743, 1, 0, 524279, 1, 0, 589815, 1, 0, 655351, 1, 0, 720887, 1, 0, 786423, 1, 0, 851959, 1, 0, 917495, 1, 0, 983031, 1, 0, 1048567, 1, 0, 1114103, 1, 0, 1179639, 1, 0, 1245175, 1, 0, 1310711, 1, 0, 1376247, 1, 0, 1441783, 1, 0, 1507319, 1, 0, 1572855, 1, 0, -65544, 1, 0, -8, 1, 0, 65528, 1, 0, 131064, 1, 0, 196600, 1, 0, 262136, 1, 0, 327672, 1, 0, 393208, 1, 0, 458744, 1, 0, 524280, 1, 0, 589816, 1, 0, 655352, 1, 0, 720888, 1, 0, 786424, 1, 0, 851960, 1, 0, 917496, 1, 0, 983032, 1, 0, 1048568, 1, 0, 1114104, 1, 0, 1179640, 1, 0, 1245176, 1, 0, 1310712, 1, 0, 1376248, 1, 0, 1441784, 1, 0, 1507320, 1, 0, 1572856, 1, 0, -65543, 1, 0, -7, 1, 0, 65529, 1, 0, 131065, 65537, 1, 196601, 65537, 1, 262137, 65537, 1, 327673, 65537, 1, 393209, 65537, 1, 458745, 65537, 1, 524281, 65537, 1, 589817, 65537, 1, 655353, 65537, 1, 720889, 65537, 1, 786425, 65537, 1, 851961, 65537, 1, 917497, 1, 0, 983033, 1, 0, 1048569, 1, 0, 1114105, 1, 0, 1179641, 1, 0, 1245177, 1, 0, 1310713, 1, 0, 1376249, 1, 0, 1441785, 1, 0, 1507321, 1, 0, 1572857, 1, 0, -65542, 1, 0, -6, 1, 0, 65530, 1, 0, 131066, 1, 0, 196602, 1, 0, 262138, 1, 0, 327674, 1, 0, 393210, 1, 0, 458746, 1, 0, 524282, 1, 0, 589818, 1, 0, 655354, 1, 0, 720890, 1, 0, 786426, 1, 0, 851962, 1, 0, 917498, 1, 0, 983034, 1, 0, 1048570, 1, 0, 1114106, 1, 0, 1179642, 1, 0, 1245178, 1, 0, 1310714, 1, 0, 1376250, 1, 0, 1441786, 1, 0, 1507322, 1, 0, 1572858, 1, 0, -65541, 1, 0, -5, 1, 0, 65531, 1, 0, 131067, 1, 0, 196603, 1, 0, 262139, 1, 0, 327675, 1, 0, 393211, 1, 0, 458747, 1, 0, 524283, 1, 0, 589819, 1, 0, 655355, 1, 0, 720891, 1, 0, 786427, 1, 0, 851963, 1, 0, -65540, 1, 0, -4, 1, 0, 65532, 1, 0, 131068, 1, 0, 196604, 1, 0, 262140, 1, 0, 327676, 1, 0, 393212, 1, 0, 458748, 1, 0, 524284, 1, 0, 589820, 1, 0, 655356, 1, 0, 720892, 1, 0, 786428, 1, 0, 851964, 1, 0, -262155, 1, 0, -196619, 1, 0, -131083, 1, 0, -262154, 1, 0, -196618, 1, 0, -131082, 1, 0, -262153, 1, 0, -196617, 1, 0, -131081, 1, 0, -262152, 1, 0, -196616, 1, 0, -131080, 1, 0, -262151, 1, 0, -196615, 1, 0, -131079, 1, 0, -262150, 1, 0, -196614, 1, 0, -131078, 1, 0, -262149, 1, 0, -196613, 1, 0, -131077, 1, 0, -262148, 1, 0, -196612, 1, 0, -131076, 1, 0, -262147, 1, 0, -196611, 1, 0, -262146, 1, 0, -196610, 1, 0, -262145, 1, 0, -196609, 1, 0, -327680, 1, 0, -262144, 1, 0, -327679, 1, 0, -262143, 1, 0, -327678, 1, 0, -262142, 1, 0, -327677, 1, 0, -262141, 1, 0, -327676, 1, 0, -262140, 1, 0, -327675, 1, 0, -262139, 1, 0, -327674, 1, 0, -262138, 1, 0, -327673, 1, 0, -262137, 1, 0, -327672, 1, 0, -262136, 1, 0, -327671, 1, 0, -262135, 1, 0, -327670, 1, 0, -262134, 1, 0, -327669, 1, 0, -262133, 1, 0, -327668, 1, 0, -262132, 1, 0, -327667, 1, 0, -262131, 1, 0, -327666, 1, 0, -262130, 1, 0, -327665, 1, 0, -262129, 1, 0, -327664, 1, 0, -262128, 1, 0, -327663, 1, 0, -262127, 1, 0, -327662, 1, 0, -262126, 1, 0, -327661, 1, 0, -262125, 1, 0, -327660, 1, 0, -262124, 1, 0, -327659, 1, 0, -262123, 1, 0, -327658, 1, 0, -262122, 1, 0, -327657, 1, 0, -262121, 1, 0, -327656, 1, 0, -262120, 1, 0, -327655, 1, 0, -262119, 1, 0, -327654, 1, 0, -262118, 1, 0)

[node name="chara" type="CharacterBody2D" parent="." groups=["Player"]]
position = Vector2(1077, 870)
script = ExtResource("2_vgjl6")

[node name="Skeleton2D" type="Skeleton2D" parent="chara"]
position = Vector2(20, 35)
modification_stack = SubResource("SkeletonModificationStack2D_be14r")

[node name="Bone2D" type="Bone2D" parent="chara/Skeleton2D"]

[node name="Bone2D2" type="Bone2D" parent="chara/Skeleton2D"]

[node name="Frezer" type="Sprite2D" parent="chara"]
texture = ExtResource("3_osxaw")

[node name="Skeleton2D2" type="Skeleton2D" parent="chara"]
position = Vector2(20, 35)
modification_stack = SubResource("SkeletonModificationStack2D_md5qg")

[node name="Icon" type="Sprite2D" parent="chara"]
visible = false
texture = ExtResource("4_k3xho")

[node name="CollisionShape2D" type="CollisionShape2D" parent="chara"]
position = Vector2(-2, 4)
shape = SubResource("RectangleShape2D_1acpw")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="chara"]
path_desired_distance = 71.28
target_desired_distance = 48.45
avoidance_enabled = true
radius = 71.64
debug_enabled = true
debug_use_custom = true
debug_path_custom_point_size = 22.49

[node name="Camera2D" type="Camera2D" parent="chara"]
zoom = Vector2(0.5, 0.5)

[node name="Worker" type="CharacterBody2D" parent="."]
position = Vector2(1233, 584)
script = ExtResource("5_xujsg")
speed = 0.3
resource_search_radius = null

[node name="Spawner" parent="Worker" instance=ExtResource("6_ofnfe")]

[node name="Sprite2D" type="Sprite2D" parent="Worker"]
texture = ExtResource("4_k3xho")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Worker"]
shape = SubResource("RectangleShape2D_06krs")

[node name="Interaction" type="Area2D" parent="Worker"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Worker/Interaction"]
shape = SubResource("CircleShape2D_3jmcg")

[node name="Button" type="Button" parent="Worker"]
offset_left = 91.0
offset_top = -121.0
offset_right = 186.0
offset_bottom = -90.0
text = "Pekerjakan"

[node name="Label" type="Label" parent="Worker"]
offset_left = -62.0
offset_top = -97.0
offset_right = 64.0
offset_bottom = -74.0
text = "State"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Worker"]

[node name="Timer" type="Timer" parent="Worker"]
one_shot = true

[node name="Dialog" type="ColorRect" parent="Worker"]
offset_left = -152.0
offset_top = -170.0
offset_right = 3.0
offset_bottom = -108.0

[node name="Label" type="Label" parent="Worker/Dialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Kita dapat %d resource boss"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Search" type="Area2D" parent="Worker"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Worker/Search"]
shape = SubResource("CircleShape2D_osxaw")

[node name="ResourceSpawner" type="Node2D" parent="."]
script = ExtResource("7_k3xho")

[node name="Res_Point" parent="." instance=ExtResource("8_osxaw")]

[node name="spawn_1" type="Area2D" parent="."]
position = Vector2(-934, 668)

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_1"]
shape = SubResource("RectangleShape2D_k3xho")

[node name="spawn_2" type="Area2D" parent="."]
position = Vector2(229, 1798)

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_2"]
shape = SubResource("RectangleShape2D_xujsg")

[node name="spawn_3" type="Area2D" parent="."]
position = Vector2(868, 1108)

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_3"]
shape = SubResource("RectangleShape2D_ofnfe")

[connection signal="body_entered" from="Worker/Interaction" to="Worker" method="_on_interaction_body_entered"]
[connection signal="body_exited" from="Worker/Interaction" to="Worker" method="_on_interaction_body_exited"]
[connection signal="pressed" from="Worker/Button" to="Worker" method="_on_button_pressed"]
[connection signal="timeout" from="Worker/Timer" to="Worker" method="_on_timer_timeout"]
